fix (home) svg z-index

--- a/src/scss/patterns/_intro.scss
+++ b/src/scss/patterns/_intro.scss
@@ -12,6 +12,8 @@
         height: auto;
         // border: 1px solid red;
         margin-top:-2em;
+        position: relative;
+        z-index: -1;
     }
 
     &__text{
